added attributes to GUI

--- a/src/main/resources/templates/exampleGUI.html
+++ b/src/main/resources/templates/exampleGUI.html
@@ -29,6 +29,17 @@
 			</select>
 		</p>
 		
+<!-- 		Sum constraint: -->
+<!-- 		<input type="text" id="calculation" placeholder="Attribute name" /> -->
+<!-- 		<select id="operator"> -->
+<!-- 			<option>&gt;</option> -->
+<!-- 			<option>&lt;</option> -->
+<!-- 			<option>&gt;=</option> -->
+<!-- 			<option>&lt;=</option> -->
+<!-- 			<option>=</option> -->
+<!-- 			<option>!=</option> -->
+<!-- 		</select> -->
+<!-- 		<input type="text" id="value" placeholder="Compared value" /> -->
 		
 		<div class="level" id="configuration">
 		</div>
