--- a/src/main/resources/templates/exampleGUI.html
+++ b/src/main/resources/templates/exampleGUI.html
@@ -27,6 +27,10 @@
 				<option value="1">Autosubmit on </option>
 				<option value="0">Autosubmit off</option>
 			</select>
+			<select id="autohide">
+				<option value="1">Autohide on </option>
+				<option value="0">Autohide off</option>
+			</select>
 		</p>
 		
 		<button onclick="addConstraint()">Add sum constraint</button>
@@ -35,7 +39,7 @@
 		
 		<br />
 		
-		<div class="level" id="configuration"></div>
+		<div id="configuration"></div>
 		
 		<script>
 			document.getElementById("millaUrl").value = window.location.origin + "/jira";
